--- a/css/default.css
+++ b/css/default.css
@@ -9,7 +9,7 @@
     padding: 10px;
     display: flex;
     -webkit-flex-flow: row wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     list-style: square;
     position: fixed;
     bottom: 20px;
@@ -109,7 +109,8 @@
 #orders-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    align-content:flex-start;
+    justify-content: flex-start;
     height: 100%;
     min-height: 80%;
     border-radius: 10px;
@@ -122,12 +123,16 @@
     background: black;
     color: white;
     margin: 5px;
+    padding: 10px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
 }
 .orderBanner {
     width: 100%;
+    height: 15%;
+    margin: -10px;
+    padding: 10px;
     display: flex;
     background-color: #9DA3A3;
     border-top-left-radius: 10px;
@@ -136,20 +141,21 @@
 .displayTableNumber {
     text-align: center;
     width: 48%;
-
+    padding: 10px;
 }
 .displayOrderTime {
     text-align: center;
     align-items:flex-end;
     width: 48%;
+    padding: 10px;
 }
 
 .orderComplete {
     height: 40px;
-    position: relative;
     width: 50%;
     bottom: 0px;
     border-radius: 10px;
+    padding: 10px;
 }
 #viewHistory {
     display: block;
